--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/labo4_tp6
 spring.datasource.username=laboiv
 spring.datasource.password=laboiv
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+server.port=8081
